--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ MEvents2016.csv filter=lfs diff=lfs merge=lfs -text
 MEvents2017.csv filter=lfs diff=lfs merge=lfs -text
 MEvents2018.csv filter=lfs diff=lfs merge=lfs -text
 MEvents2019.csv filter=lfs diff=lfs merge=lfs -text
+MMasseyOrdinals.csv filter=lfs diff=lfs merge=lfs -text
